resourcestoinstall/evictor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hwameistor-volume-evictor
  namespace: hwameistor
  labels:
    app: hwameistor-volume-evictor
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: hwameistor-volume-evictor
  template:
    metadata:
      labels:
        app: hwameistor-volume-evictor
    spec:
      serviceAccountName: hwameistor-admin
      containers:
        - name: evictor
          image: ghcr.m.daocloud.io/hwameistor/evictor:v0.5.0
          imagePullPolicy: IfNotPresent
          resources:
