resourcestoinstall/local-disk-manager-csi-controller.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hwameistor-local-disk-csi-controller
  namespace: hwameistor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hwameistor-local-disk-csi-controller
  template:
    metadata:
      labels:
        app: hwameistor-local-disk-csi-controller
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - hwameistor-local-disk-manager
            topologyKey: topology.disk.hwameistor.io/node
      serviceAccount: hwameistor-admin
      containers:
        - name: provisioner
          resources: 
          image: k8s-gcr.m.daocloud.io/sig-storage/csi-provisioner:v2.0.3
          imagePullPolicy: "IfNotPresent"
          args:
            - "--v=5"
            - "--csi-address=$(CSI_ADDRESS)"
            - "--leader-election=true"
            - "--feature-gates=Topology=true"
            - "--strict-topology"
            - "--extra-create-metadata=true"
          volumeMounts:
            - name: socket-dir
              mountPath: /csi
        - name: attacher
          resources: 
          image: k8s-gcr.m.daocloud.io/sig-storage/csi-attacher:v3.0.1
          imagePullPolicy: IfNotPresent
          args:
            - "--v=5"
            - "--csi-address=$(CSI_ADDRESS)"
            - "--leader-election=true"
            - "--timeout=120s"
          volumeMounts:
            - name: socket-dir
              mountPath: /csi
      volumes:
        - name: socket-dir
          hostPath:
            path: /var/lib/kubelet/plugins/disk.hwameistor.io
            type: DirectoryOrCreate
