resourcestoinstall/local-storage-csi-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hwameistor-local-storage-csi-controller 
  namespace: hwameistor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hwameistor-local-storage-csi-controller
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hwameistor-local-storage-csi-controller
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - hwameistor-local-storage
            topologyKey: topology.lvm.hwameistor.io/node
      containers:
      - args:
        - --v=5
        - --csi-address=$(CSI_ADDRESS)
        - --leader-election=true
        - --feature-gates=Topology=true
        - --strict-topology
        - --extra-create-metadata=true
        image: k8s-gcr.m.daocloud.io/sig-storage/csi-provisioner:v2.0.3
        imagePullPolicy: IfNotPresent
        name: provisioner
        resources: 
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /csi
          name: socket-dir
      - args:
        - --v=5
        - --csi-address=$(CSI_ADDRESS)
        - --leader-election=true
        - --timeout=120s
        image: k8s-gcr.m.daocloud.io/sig-storage/csi-attacher:v3.0.1
        imagePullPolicy: IfNotPresent
        name: attacher
        resources: 
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /csi
          name: socket-dir
      - args:
        - --v=5
        - --csi-address=$(CSI_ADDRESS)
        - --leader-election=true
        image: k8s-gcr.m.daocloud.io/sig-storage/csi-resizer:v1.0.1
        imagePullPolicy: IfNotPresent
        name: resizer
        resources: 
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /csi
          name: socket-dir
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      serviceAccountName: hwameistor-admin 
      serviceAccount: hwameistor-admin
      securityContext: {}
      terminationGracePeriodSeconds: 30
      tolerations:
      - key: CriticalAddonsOnly
        operator: Exists
      - effect: NoSchedule
        key: node.kubernetes.io/not-ready
        operator: Exists
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
        operator: Exists
      - effect: NoSchedule
        key: node-role.kubernetes.io/control-plane
        operator: Exists
      - effect: NoSchedule
        key: node.cloudprovider.kubernetes.io/uninitialized
        operator: Exists
      volumes:
      - hostPath:
          path: /var/lib/kubelet/plugins/lvm.hwameistor.io
          type: DirectoryOrCreate
        name: socket-dir
